--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "sass": "^1.57.1",
     "typescript": "^4.9.3",
+    "json-server": "^0.17.1",
     "vite": "^4.0.0"
   }
 }
